# perceptor

./: .gitignore  ARCHITECTURE.md  Cargo.toml  ROADMAP.md
.claude/: context.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  prelude.rs
src/core/: frame.rs  mod.rs  pipeline.rs  plugin.rs  schedule.rs
src/plugins/: mod.rs
src/plugins/filters/: grayscale.rs  mod.rs  sobel.rs
src/plugins/io/: config.rs  image_reader.rs  image_writer.rs  mod.rs  video_reader.rs
src/plugins/ml/: inference.rs  mod.rs
src/tests/: grayscale_test.rs  image_reader_test.rs  mod.rs
