[workspace]
members = ["."]
resolver = "2"

[package]
name = "perceptor"
version = "0.1.0"
edition = "2021"
description = "Modular computer vision pipeline library built on ECS"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/perceptor"
keywords = ["computer-vision", "ecs", "image-processing", "pipeline"]
categories = ["multimedia::images", "science"]

[lib]
name = "perceptor"
path = "src/lib.rs"

[dependencies]
# ECS engine — core do pipeline
bevy_ecs = "0.15"

# Tensores e processamento numérico
ndarray = { version = "0.15", features = ["rayon"] }

# I/O de imagens
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }

# Paralelismo data-parallel
rayon = "1.10"

# Tratamento de erros
anyhow = "1.0"
thiserror = "2.0"

# Logging/tracing estruturado
tracing = "0.1"

# GPU acceleration (opcional, ativado com feature `gpu`)
[dependencies.wgpu]
version = "22"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
gpu = ["dep:wgpu"]      # Aceleração via wgpu (WebGPU/Vulkan/Metal)
ml  = []                # Marcador para habilitar plugins ML (tch-rs / ort)

[[bench]]
name = "pipeline_bench"
harness = false
